Sonar - remove Blocker issues