@@ -6,7 +6,6 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.json.simple.JSONArray;
@@ -36,8 +35,7 @@ public class ParadataParser {
 
 			// Get all filepaths for each ParadataUE
 			try (Stream<Path> walk = Files.walk(filePath)) {
-				List<Path> listFilePaths = walk.filter(Files::isRegularFile)
-												.collect(Collectors.toList());
+				List<Path> listFilePaths = walk.filter(Files::isRegularFile).toList();
 				// Parse each ParaDataUE
 				List<ParaDataUE> listParaDataUE = new ArrayList<>();
 
@@ -48,11 +46,7 @@ public class ParadataParser {
 					paraDataUE.sortEvents();			
 					if (paraDataUE.getEvents().size() > 2) {
 						paraDataUE.createOrchestratorsAndSessions();
-						try {
-							integrateParaDataVariablesIntoUE(paraDataUE, surveyRawData);
-						} catch (Exception e) {
-							log.error(e.getMessage());
-						}
+						integrateParaDataVariablesIntoUE(paraDataUE, surveyRawData);
 						listParaDataUE.add(paraDataUE);
 					}
 				}
@@ -144,8 +138,7 @@ public class ParadataParser {
 			return object;
 		} else if (object instanceof Long) {
 			return object.toString();
-		} else if (object instanceof JSONArray) {
-			JSONArray jsonArray = (JSONArray) object;
+		} else if (object instanceof JSONArray jsonArray) {
 			List<String> values = new ArrayList<>();
 			for (int index = 0; index < jsonArray.size(); index++) {
 				values.add((String) getValue(jsonArray.get(index)));
